--- a/themes/space/css/style.css
+++ b/themes/space/css/style.css
@@ -38,6 +38,18 @@ body {
 
 /* Header */
 
+.nav li:first-child{
+    background-color: #ff00ff;
+}
+
+.nav li:last-child{
+    background-color: aqua;
+}
+
+.nav li :hover{
+    background-color: #111;
+}
+
 .header, .site-header {
     display: flex;
     justify-content: space-between;
@@ -147,4 +159,46 @@ blockquote {
     margin-left: 1em;
     padding-left: 1em;
     border-left: 0.5em solid #f5f5f5;
+}
+
+.content-box {
+    height: 100px;
+    color: white;
+    text-align: center;
+    line-height: 100px;
+    font-weight: bold;
+    margin: 10px;
+    border: 1px solid #000;
+    border-radius: 5px;
+}
+
+.content-box.black-box {
+    width: 600px;
+    background-color: black;
+}
+
+.content-box.blue-box {
+    width: 100%;
+    background-color: blue;
+}
+
+.border-box {
+    height: 100px;
+    color: white;
+    text-align: center;
+    line-height: 100px;
+    font-weight: bold;
+    margin: 10px;
+    border: 1px solid #000;
+    border-radius: 5px;
+}
+
+.border-box.red-box {
+    width: 50%;
+    background-color: red;
+}
+
+.border-box.green-box {
+    width: 100%;
+    background-color: green;
 }
