--- a/themes/kmom02/incl/footer.twig
+++ b/themes/kmom02/incl/footer.twig
@@ -1,15 +1,18 @@
-<div class="container">
+<div class="footer">
+    <div>
+        <p>
+            En footer med lite text.
+        </p>
+    </div>
     <div class="social">
+        <!-- Loads from FontAwesome (themes/shared/css/font-awesome.min.css) -->
         {% for social in pages["_meta"].meta.social %}
-            <a href="{{ social.url }}" title="{{ social.title }}" role="button">
-                <i class="fa fa-{{ social.icon }}" aria-hidden="true"></i>
-                <span class="sr-only">{{ social.title }}</span>
-            </a>
+        <a href="{{ social.url }}" title="{{ social.title }}" role="button">
+            <i class="fa fa-{{ social.icon }}" aria-hidden="true"></i>
+            <span class="sr-only">{{ social.title }}</span>
+        </a>
         {% endfor %}
     </div>
-    <p>
-        En footer med lite text.
-    </p>
 </div>
 
 <script src="{{ theme_url }}/../shared//js/modernizr-3.3.1-custom.min.js" type="text/javascript"></script>
