--- a/themes/kmom02/scss/style.scss
+++ b/themes/kmom02/scss/style.scss
@@ -4,6 +4,10 @@ $fa-font-path: '../../shared/fontawesome/webfonts';
 @import '../../shared/fontawesome/scss/solid';
 @import '../../shared/fontawesome/scss/regular';
 
+@import 'test';
+
+@import 'nav';
+
 @import '../../node_modules/normalize.css/normalize';
 @import 'variables';
 
