--- a/themes/kmom02/scss/variables.scss
+++ b/themes/kmom02/scss/variables.scss
@@ -1,5 +1,5 @@
-$font-color: #000;
+$font-color: #fff;
 $font-alternative-color: #fff;
 $accent-color: #ee6c4d;
-$background-color: #3d5a80;
-$background-alternative-color: #e0fbfc;
+$background-color: rgb(1, 52, 118);
+$background-alternative-color: #00f7ff;
