--- a/themes/kmom02/scss/base.scss
+++ b/themes/kmom02/scss/base.scss
@@ -1,7 +1,13 @@
 body {
     background-color: $background-color;
+    margin: 5%;
 }
 
 * {
     color: $font-color;
 }
+
+.main {
+    width: 64em;
+}
+
