--- a/themes/kmom02/incl/footer.twig
+++ b/themes/kmom02/incl/footer.twig
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="containerfooter">
     <p>
         Här är min footer där det finns diverse länkar med logos för dem.
     </p>
