--- a/themes/kmom02/scss/style-dark.scss
+++ b/themes/kmom02/scss/style-dark.scss
@@ -1,5 +1,4 @@
-@import 'variables';
-
+@import 'variables-dark';
 @import '../../shared/fontawesome/scss/fontawesome';
 $fa-font-path: '../../shared/fontawesome/webfonts';
 @import '../../shared/fontawesome/scss/brands';
@@ -20,4 +19,3 @@ $fa-font-path: '../../shared/fontawesome/webfonts';
 
 @import 'technologies';
 @import 'sidebar';
-@import 'colors'
