--- a/themes/kmom02/scss/variables.scss
+++ b/themes/kmom02/scss/variables.scss
@@ -1,5 +1,21 @@
+$font-family: 'Roboto', sans-serif;
 $font-color: #fff;
 $font-alternative-color: #fff;
 $accent-color: #ee6c4d;
-$background-color: rgb(1, 52, 118);
+$background-color: #265d80;
 $background-alternative-color: #00f7ff;
+
+$sidebar-background-color: #333;
+$sidebar-color: #fff;
+$sidebar-a-color: #fff;
+
+$nav-background-color: #aa4f4f;
+$li-color: #fff;
+$active-color: rgb(0, 255, 255);
+
+$box-background-color: #aa4f4f;
+
+$pre-background-color: #f4f4f4;
+$code-color: #333;
+$code-background: #f5f5f5;
+$pre-background: #f5f5f5;
