--- a/themes/kmom02/scss/code.scss
+++ b/themes/kmom02/scss/code.scss
@@ -3,8 +3,8 @@ code {
     padding: 0.1em 0.2em;
     border: 1px solid #ccc;
     border-radius: 0.3em;
-    background: #f5f5f5;
-    font-family: monospace;
+    background: $code-background;
+    font-family: $font-family;
     font-size: 0.85rem;
     line-height: 1.9824;
 }
@@ -13,7 +13,7 @@ pre {
     padding: 0 1em;
     border: 1px solid #ccc;
     border-radius: 0.3em;
-    background: #f5f5f5;
+    background: $pre-background;
 }
 
 pre code {
