--- a/themes/kmom02/scss/nav.scss
+++ b/themes/kmom02/scss/nav.scss
@@ -1,22 +1,20 @@
 .nav {
-    background-color: #f0f0f0;
+    background-color: $nav-background-color;
     padding: 10px;
     text-align: left;
+}
 
-    ul {
-        list-style: none;
-        padding: 0;
-    }
+.nav ul {
+    list-style: none;
+    padding: 0;
+}
 
-    li {
-        a {
-            color: #333;
-            text-decoration: none;
-            padding: 5px 10px;
+.nav li a {
+    color: $li-color;
+    text-decoration: none;
+    padding: 5px 10px;
 
-            &.active {
-                color: rgb(0, 255, 255);
-            }
-        }
+    .active {
+        color: $active-color;
     }
 }
